# urban-dictionary-api

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml
api/: api.py  docs.py  utils.py
