[tool.poetry]
name = "Urban Dictionary REST API"
version = "0.1.0"
description = "It allows to retrieve the definition of a word from Urban Dictionary."
authors = ["n0nuser <gonzrubio.pablo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
bs4 = "^0.0.1"
fastapi = "^0.79.0"
httpx = "^0.23.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
flake8 = "^5.0.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
